--- a/octopress/source/_includes/custom/footer.html
+++ b/octopress/source/_includes/custom/footer.html
@@ -1,4 +1,7 @@
 <p>
   Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} -
-  <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
-</p>
+  <span class="credit"><a href="https://github.com/peterfschaadt">Github</a></span>
+  <span class="credit"><a href="https://plus.google.com/u/0/106197844179274757910">Google+</a></span>
+  <span class="credit"><a href="https://twitter.com/peterschaadt">@PeterSchaadt</a></span>
+  <span class="credit"><a href="https://facebook.com/peter.schaadt">Facebook</a></span>
+  
