--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,3 +1,5 @@
 <p>
-  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }}
+  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} / 
+  <a href="https://twitter.com/peterschaadt">Twitter</a> / 
+  <a href="https://plus.google.com/106197844179274757910">Google+</a> /
 </p>
