--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -2,5 +2,6 @@
   <li><a href="{{ root_url }}/about">About Me</a></li>
   <li><a href="{{ root_url }}/">Blog</a></li>
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
+  <li><a href="{{ root_url }}/resume">Resume</a></li>
   <li><a href="{{ root_url }}/contact">Contact</a></li>
 </ul>
