--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,4 @@
 <section>
   <h1>About Me</h1>
-  <p>A little something about me.</p>
+  <p>I'm a student at the University of Virginia studying Computer Science. Sunnyvale, California will always be home.&nbsp;&nbsp;<a href="/about">more</a></p>
 </section>
