--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -4,4 +4,5 @@
   <a href="https://twitter.com/peterschaadt">Twitter</a> / 
   <a href="https://www.linkedin.com/profile/view?id=93642736">LinkedIn</a> / 
   <a href="https://plus.google.com/106197844179274757910">Google+</a> /
+  <a href="/contact">Email</a> /
 </p>
