Updating LinkedIn profile URL.

--- a/source/_includes/custom/asides/links.html
+++ b/source/_includes/custom/asides/links.html
@@ -3,7 +3,7 @@
   <p>
     <a href="https://github.com/peterfschaadt"><img src="/images/icons/github.png" /></a>
     <a href="https://twitter.com/peterschaadt"><img src="/images/icons/twitter.png" /></a>
-    <a href="https://www.linkedin.com/profile/view?id=93642736"><img src="/images/icons/linkedin.png" /></a>
+    <a href="https://www.linkedin.com/in/peterschaadt"><img src="/images/icons/linkedin.png" /></a>
     <a href="https://plus.google.com/106197844179274757910"><img src="/images/icons/googleplus.png" /></a>
     <a href="/contact"><img src="/images/icons/gmail.png" /></a>
   </p>
